# Operator

./: .gitignore  build.gradle.kts  build_error.txt  create_batch1.py  local.properties  settings.gradle.kts
CameraXApp/: build.gradle.kts  settings.gradle.kts
CameraXApp/core/common/: build.gradle.kts
CameraXApp/core/common/src/main/: AndroidManifest.xml
CameraXApp/core/common/src/main/java/com/example/camerax/core/common/: AppDispatchers.kt  Logger.kt
CameraXApp/core/model/: build.gradle.kts
CameraXApp/core/model/src/main/: AndroidManifest.xml
CameraXApp/gradle/: libs.versions.toml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/camerax/app/: CameraApplication.kt  MainActivity.kt
core/camera/: build.gradle.kts
core/camera/src/main/java/com/example/camerax/core/camera/di/: CameraModule.kt
core/camera/src/main/java/com/example/camerax/core/camera/provider/: DeviceCapabilityRepository.kt  DeviceCapabilityRepositoryImpl.kt
core/camera/src/main/java/com/example/camerax/core/camera/session/: CameraSessionController.kt  (+2 more)
core/common/: build.gradle.kts
core/model/: build.gradle.kts
core/native/: build.gradle.kts
core/native/src/main/cpp/: CMakeLists.txt  camera_engine.cpp  camera_engine.h  camera_engine_host_tests.cpp  jni_bridge.cpp
core/native/src/main/java/com/example/camerax/core/nativebridge/: JniProcessingGateway.kt  NativeModule.kt  NativeProcessingGateway.kt  NativeStatus.kt
core/pipeline/: build.gradle.kts
feature/viewfinder/: build.gradle.kts
gradle/: libs.versions.toml
(+36 files in other folders)
